# madrid-fines-project

./: .gitignore  README.md  pyproject.toml
madridFines/: __init__.py  cache.py  cacheUrl.py  madridFines.py
madridFines.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notebooks/: Etapa1.ipynb  mapa_multas_madrid.html  mapa_multas_madrid_full.html  validacion_clases.ipynb
tests/: test_cache.py  test_cacheurl.py  test_madridFines.py
tests/data/: test_page.html
